# learning

./: .gitignore  README.md
RM_code/Sentinal-2024/: .clang-format  README.md  mapping.sh  nav.sh  nav_edge.sh
RM_code/Sentinal-2024/behaviortree/: CMakeLists.txt
RM_code/Sentinal-2024/behaviortree/.cache/clangd/index/: behaviortree.hpp.AC0E1E346B025BF3.idx  bt_topic_pub_node.hpp.16828E3BDFD4EADA.idx  bt_topic_sub_node.hpp.695A1E3E7EEA7E43.idx
RM_code/Sentinal-2024/behaviortree/src/: behaviortree_node.cpp  mytree.xml
RM_code/Sentinal-2024/communicate/: CMakeLists.txt  README.md
RM_code/Sentinal-2024/communicate/config/: config_right.yaml
RM_code/Sentinal-2024/communicate/include/communicate/: uplink.hpp
RM_code/Sentinal-2024/communicate/msg/: IgnoreClasses.msg
RM_code/Sentinal-2024/communicate/shell/: run.bash
RM_code/Sentinal-2024/communicate/src/: downlink.cpp  uplink.cpp
RM_code/Sentinal-2024/goal_client/: CMakeLists.txt  package.xml
RM_code/Sentinal-2024/goal_client/include/goal_client/: goal_client.hpp
RM_code/Sentinal-2024/goal_client/src/: goal_client_node.cpp
RM_code/Sentinal-2024/pub1/: CMakeLists.txt
RM_code/Sentinal-2024/pub1/src/: pub1.cpp
RM_code/Sentinal-2024/status_management/: CMakeLists.txt
RM_code/Sentinal-2024/status_management/src/: status_management_node.cpp
RM_code/open_source/Sential_decsion/shenzhen/src/BehaviorTree.ROS2/src/btcpp_ros2_interfaces/: CMakeLists.txt
RM_code/rm_auto_aim/: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md
RM_code/rm_auto_aim/src/armor_auto_aim/armor_detector/: CMakeLists.txt  README.md  package.xml
RM_code/rm_auto_aim/src/armor_auto_aim/armor_detector/include/armor_detector/: armor.hpp  detector.hpp  detector_node.hpp  number_classifier.hpp  pnp_solver.hpp
RM_code/rm_auto_aim/src/armor_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp  number_classifier.cpp  pnp_solver.cpp
RM_code/rm_auto_aim/src/armor_auto_aim/armor_detector/test/: detector_test.cpp
RM_code/rm_auto_aim/src/auto_aim/: CMakeLists.txt  package.xml
RM_code/rm_auto_aim/src/auto_aim/config/: config.yaml  mindvision.config  rune_mindvision.config
RM_code/rm_auto_aim/src/auto_aim/include/auto_aim/: tf2_node.hpp
RM_code/rm_auto_aim/src/auto_aim/launch/: armor.launch.py  launch.py  left.launch.py  old_serial.launch.py  right.launch.py
RM_code/rm_auto_aim/src/auto_aim/src/: tf2_node.cpp
RM_code/rm_auto_aim/src/auto_aim_interfaces/: CMakeLists.txt
RM_code/rm_auto_aim/src/auto_aim_interfaces/msg/: Armor.msg  DebugArmor.msg  DebugLight.msg  DebugRune.msg  Rune.msg  Target.msg  TrackerInfo.msg
RM_code/rm_auto_aim/src/rune_auto_aim/rune_tracker/: CMakeLists.txt  package.xml
RM_code/rm_auto_aim/src/rune_auto_aim/rune_tracker/include/rune_tracker/: concepts.hpp  filter.h  literals.hpp  mathematics.hpp  pnp_solver.hpp  point.hpp  statistic.hpp  tracker.hpp  tracker_node.hpp  type_traits.hpp  ukf_plus.h  usings.hpp
RM_code/rm_auto_aim/src/rune_auto_aim/rune_tracker/src/: pnp_solver.cpp  tracker.cpp  tracker_node.cpp  ukf_plus.cpp
RM_code/rm_auto_aim/src/sensor/camera/: CMakeLists.txt  README.md  package.xml
RM_code/rm_auto_aim/src/sensor/camera/include/camera/: camera4calibrate.hpp  camera_node.hpp  inner_shot.hpp  mindvision.hpp
RM_code/rm_auto_aim/src/sensor/camera/src/: camera4calibrate.cpp  camera_node.cpp  inner_shot.cpp  mindvision.cpp
RM_code/rm_auto_aim/src/sensor/camera/test/: camera_test.cpp
RM_code/rm_auto_aim/src/shooter/: CMakeLists.txt  package.xml
RM_code/rm_auto_aim/src/shooter/include/shooter/: shooter.hpp  shooter_node.hpp
RM_code/rm_auto_aim/src/shooter/src/: shooter.cpp  shooter_node.cpp
deeplearning/12.权重衰退/: main.py
deeplearning/13.丢弃法/: main.py
deeplearning/16.神经网络基础/: 参数管理.py  模型构造.py  自定义层.py  读写文件.py
deeplearning/17.使用GPU/: main.py
deeplearning/19.卷积层/: main.py
deeplearning/20.卷积层里的填充和步幅/: main.py
deeplearning/21.卷积层里的多输入输出/: main.py
deeplearning/22.池化层/: main.py
deeplearning/27.GoogLeNet/: main.py
deeplearning/28.批量归一化/: main.py
deeplearning/29.ResNet/: main.py
deeplearning/36.数据增广/: main.py
deeplearning/37.微调/: main.py
deeplearning/39.Kaggle实战/: main.py
deeplearning/4.数据操作+数据预处理/: main.py
deeplearning/42.锚框/: main.py
learn_note/: 9.11.md  9.13.md  9.15.md  9.16.md  9.17.md  9.18.md  9.23.md  9.9.md  动作节点.md  北极熊.md  各类节点.md  学姐代码观察.md  青工会.md
my_code/learn/learn_behaviortree/move_demo/: CMakeLists.txt
my_code/learn/learn_behaviortree/move_demo/src/: main.cpp  move.cpp
my_code/my_behaviortree/src/behaviortree/: CMakeLists.txt  package.xml
my_code/my_behaviortree/src/behaviortree/include/behaviortree_ros2/: bt_action_node.hpp  bt_topic_pub_node.hpp  bt_topic_sub_node.hpp  ros_node_params.hpp
my_code/my_behaviortree/src/behaviortree/include/node/action/: move_around.hpp  select_enemy.hpp
my_code/my_behaviortree/src/behaviortree/include/node/condition/: is_detect_enemy.hpp  is_distance_ok.hpp  is_friend_ok.hpp  is_game_time.hpp  is_outpost_ok.hpp  is_status_ok.hpp
my_code/my_behaviortree/src/behaviortree/include/node/publish/: autoPurchase.hpp  autoResurrection.hpp  moveTo.hpp  rotateArmor.hpp
my_code/my_behaviortree/src/behaviortree/include/node/subscribe/: aimPositionDataInit.hpp  allHpDataInit.hpp  gameDataInit.hpp  sentryPositionDataInit.hpp
my_code/my_behaviortree/src/behaviortree/node/action/: move_around.cpp  select_enemy.cpp
my_code/my_behaviortree/src/behaviortree/node/condition/: is_detect_enemy.cpp  is_distance_ok.cpp  is_friend_ok.cpp  is_game_time.cpp  is_outpost_ok.cpp  is_status_ok.cpp
my_code/my_behaviortree/src/behaviortree/node/publish/: autoPurchase.cpp  autoResurrection.cpp  moveTo.cpp  rotateArmor.cpp
my_code/my_behaviortree/src/behaviortree/node/subscribe/: aimPositinDataInit.cpp  allHpDataInit.cpp  gameDataInit.cpp  sentryPositionDataInit.cpp
my_code/my_behaviortree/src/behaviortree_interfaces/: CMakeLists.txt  package.xml
my_code/my_behaviortree/src/behaviortree_interfaces/msg/: AllRobotHP.msg  EnemyInformation.msg  FirstAttackEnemy.msg  SentryStatus.msg
test/: CMakeLists.txt
(+250 files in other folders)
