<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>camera</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="jalenchuh@gmail.com">jalen</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>auto_aim_interfaces</depend>
    <depend>communicate</depend>


    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>ament_cmake_clang_format</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
